tests/error/null_array_access.gw
// [contains] NullPointerException:
int i[];
i[0];
